--- a/.github/workflows/drawio-convert.yml
+++ b/.github/workflows/drawio-convert.yml
@@ -383,42 +383,18 @@ jobs:
 
 
           # Only process .drawio files with an ID in the filename that were added or modified in the last commit
-          echo "Detecting changed ID'd .drawio files in the last commit..."
-          # Get list of added or modified .drawio files with an ID in the filename
-          git diff --name-only --diff-filter=AM HEAD^ HEAD -- 'drawio_files/* ([0-9][0-9][0-9]).drawio' | sort > /tmp/changed_files.txt
 
-          # Fallback for initial commit (no HEAD^)
+      echo "Detecting changed ID'd .drawio files in the last commit..."
+      # Get list of added or modified .drawio files with an ID in the filename
+      git diff --name-only --diff-filter=AM HEAD^ HEAD -- 'drawio_files/* ([0-9][0-9][0-9]).drawio' | sort > /tmp/changed_files.txt
 
-          if [ ! -s /tmp/changed_files.txt ]; then
-            git diff-tree --no-commit-id --name-only -r HEAD -- 'drawio_files/* ([0-9][0-9][0-9]).drawio' | sort > /tmp/changed_files.txt
-          fi
+      # Fallback for initial commit (no HEAD^)
+      if [ ! -s /tmp/changed_files.txt ]; then
+        git diff-tree --no-commit-id --name-only -r HEAD -- 'drawio_files/* ([0-9][0-9][0-9]).drawio' | sort > /tmp/changed_files.txt
+      fi
 
-          # Fallback: If still no files, process any ID'd .drawio file that does not have a corresponding .html output
-          if [ ! -s /tmp/changed_files.txt ]; then
-            echo "No changed ID'd .drawio files detected in recent commits. Running fallback: process any ID'd .drawio file missing HTML output or with new commits."
-            shopt -s nullglob
-            changelog_file="html_files/CHANGELOG.csv"
-            for file in drawio_files/*\ \([0-9][0-9][0-9]\).drawio; do
-              [ -f "$file" ] || continue
-              base=$(basename "$file" .drawio)
-              html_file="html_files/${base}.html"
-              # Get latest commit hash for this file
-              latest_hash=$(git log -1 --format="%h" -- "$file")
-              # Get last commit hash for this file from the changelog
-              last_changelog_hash=""
-              if [ -f "$changelog_file" ]; then
-                last_changelog_hash=$(awk -F',' -v f="$file" 'tolower($4)==tolower(f){gsub(/\"/,"",$(NF)); print $(NF)}' "$changelog_file" | tail -n 1)
-              fi
-              # If HTML is missing or commit hash is different, process this file
-              if [ ! -f "$html_file" ] || [ "$latest_hash" != "$last_changelog_hash" ]; then
-                echo "$file" >> /tmp/changed_files.txt
-              fi
-            done
-            shopt -u nullglob
-          fi
-
-          echo "Files to process (ID'd .drawio files changed in this commit or missing HTML):"
-          cat /tmp/changed_files.txt
+      echo "Files to process (ID'd .drawio files changed in this commit):"
+      cat /tmp/changed_files.txt
 
           # Process each changed file
 
