--- a/.github/workflows/drawio-convert.yml
+++ b/.github/workflows/drawio-convert.yml
@@ -362,7 +362,7 @@ jobs:
           mkdir -p svg_files html_files
 
           # Create a simple converter script
-          cat > /tmp/convert-drawio.sh << \EOL
+          cat > /tmp/convert-drawio.sh << 'EOL'
 #!/bin/bash
 input_file=$1
 output_file=$2
